In process to build an e-commerce using mantine as a desing tool

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -1,7 +1,21 @@
-/*
-    home.css: This website contains selectors only used in home.css
+.cover {
+  background: rgba(0, 0, 0, 0.13);
+  flex-direction: column;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
 
-    All pages share the styles on index.css but you should create 
-    one more css for each page that will contain the selected used 
-    on that page only (the ones not reused in other pages).
-*/
+.title {
+  margin-top: 20px;
+  width: 400px;
+  border-radius: 10px;
+  padding: 5px;
+  background: rgb(190, 185, 185);
+}
+.button {
+  margin-top: 20px;
+  background: rgb(181, 207, 134);
+}
